# Hackathon2-phase2

./: .dockerignore  .gitignore  CLAUDE.md  QUICKSTART.md  README.md
.claude/Skills/: deployment-infrastructure.md  frontend-development.md  task-management.md
.claude/agents/: api-database-agent.md  cloud-deployment-agent.md  conversational-agent.md  todo-master-coordinator.md  ui-ux-frontend-specialist.md
.claude/commands/: ai-agent-logic.md  api-development.md  backend-development.md  chatbot-interaction.md  event-driven-architecture.md  state-secret-management.md  user-authentication.md
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260108_0001_initial_tables.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  coordinator.py  prompts.py
backend/app/agents/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/app/api/: auth.py  chat.py  deps.py  tasks.py
backend/app/core/: config.py  database.py  security.py
backend/app/events/: __init__.py
backend/app/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  task.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  task_service.py
frontend/: .env.example  .eslintrc.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
infrastructure/: docker-compose.yml
(+61 files in other folders)
